--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "react-native start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "react-native run-ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~44.0.2",
+    "expo-app-loading": "^1.3.0",
+    "expo-asset": "~8.4.5",
+    "expo-font": "~10.0.4",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
