--- a/ios/foodacrna/Info.plist
+++ b/ios/foodacrna/Info.plist
@@ -49,6 +49,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+	  <string><MaterialIcons class="ttf"></MaterialIcons></string>
+	</array>
   <key>UIStatusBarStyle</key>
   <string>UIStatusBarStyleDefault</string>
 </dict>
