--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,3 +47,14 @@ target 'foodacrna' do
   end
 
 end
+
+# Add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+
+# For Analytics without IDFA collection capability, use this pod instead
+# pod ‘Firebase/AnalyticsWithoutAdIdSupport’
+
+# Add the pods for any other Firebase products you want to use in your app
+# For example, to use Firebase Authentication and Cloud Firestore
+pod 'Firebase/Auth'
+pod 'Firebase/Firestore'
