--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/styled-components": "^5.1.21",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.2",
     "expo-app-loading": "^1.3.0",
     "expo-asset": "~8.4.5",
@@ -32,7 +34,12 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-native": "^0.66.15",
+    "@types/react-test-renderer": "^17.0.1",
+    "typescript": "^4.5.5"
   },
   "private": true
 }
