--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^14.3.1",
     "@react-native-firebase/auth": "^14.3.1",
+    "@react-native-firebase/firestore": "^14.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
